--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
-Click==7.0
-Flask==1.0.2
-Flask-Login==0.4.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-psycopg2==2.7.7
-python-slugify==3.0.2
-SQLAlchemy==1.3.1
-text-unidecode==1.2
-Werkzeug==0.14.1
-WTForms==2.2.1
+alembic==1.12.0
+blinker==1.6.3
+click==8.1.7
+colorama==0.4.6
+dnspython==2.3.0
+email-validator==2.0.0.post2
+Flask==2.3.0
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
+psycopg2==2.9.9
+python-slugify==8.0.1
+SQLAlchemy==2.0.21
+text-unidecode==1.3
+typing_extensions==4.8.0
+Werkzeug==2.3.0
+WTForms==3.0.1
+gunicorn
